# InvestmentBlock

./: CHANGELOG.md  CMakeLists.txt  README.md  makefile  makefile-c  makefile-s
cmake/: InvestmentBlockConfig.cmake.in
include/: InvestmentBlock.h  InvestmentFunction.h
src/: InvestmentBlock.cpp  InvestmentFunction.cpp
test/: CMakeLists.txt  makefile  test.cpp
test/config/: BSPar.txt  uc_solverconfig.txt
test/instance-1/: InvestmentBlock.nc4
test/instance-2/: InvestmentBlock.nc4  dcnetwork_toy.nc4
